gameops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gameops
  namespace: gameops
  labels:
    app: gameops
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3000
    targetPort: http
  selector:
    app: gameops
